Refactor TransferService tests